Bug 259706 - WebKit shouldn't be modifying the value of UIApplication.idleTimerDisabled
Summary: WebKit shouldn't be modifying the value of UIApplication.idleTimerDisabled
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-08-01 14:16 PDT by Chris Dumez
Modified: 2023-08-01 16:55 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-08-01 14:16:11 PDT
WebKit shouldn't be modifying the value of UIApplication.idleTimerDisabled because we're a framework. The hosting application can rely on this flag to prevent screen sleep and it is not good for WebKit to be potentially overriding a value set by the application.

To address the issue, the UIKit code indicates that frameworks are expected to call the `_setIdleTimerDisabled:forReason:` SPI instead.
Comment 1 Chris Dumez 2023-08-01 14:19:02 PDT
Pull request: https://github.com/WebKit/WebKit/pull/16291
Comment 2 EWS 2023-08-01 16:54:30 PDT
Committed 266499@main (9ed33f8f5890): <https://commits.webkit.org/266499@main>

Reviewed commits have been landed. Closing PR #16291 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-08-01 16:55:18 PDT
<rdar://problem/113236414>