WebKit shouldn't be modifying the value of UIApplication.idleTimerDisabled https://bugs.webkit.org/show_bug.cgi?id=259706

Reviewed by Jer Noble.

WebKit shouldn't be modifying the value of UIApplication.idleTimerDisabled
because we're a framework. The hosting application can rely on this flag to
prevent screen sleep and it is not good for WebKit to be potentially overriding
a value set by the application.

To address the issue, the UIKit code indicates that frameworks are expected to
call the `_setIdleTimerDisabled:forReason:` SPI instead.

* Source/WebCore/PAL/pal/spi/ios/UIKitSPI.h:
* Source/WebCore/PAL/pal/system/ios/SleepDisablerIOS.mm:
(PAL::ScreenSleepDisabler::updateState):

Canonical link: https://commits.webkit.org/266499@main